--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.android.support:support-v4:21.0.3'
     compile 'com.android.support:appcompat-v7:21.0.3'
+    kapt 'com.android.databinding:compiler:1.0-rc5'
 }
 buildscript {
     ext.kotlin_version = '1.0.0'
@@ -44,4 +45,7 @@ buildscript {
 repositories {
     jcenter()
     mavenCentral()
+}
+kapt {
+    generateStubs = true
 }
