クラス選択画面追加

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         </activity>
 
         <activity android:name=".MainActivity"/>
-
+        <activity android:name=".ClassSelectActivity"/>
         <activity android:name=".GenderSelectActivity"/>
     </application>
 
