技詳細画面（仮）を実装

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".ui.MainActivity"/>
         <activity android:name=".ui.ClassSelectActivity"/>
         <activity android:name=".ui.GenderSelectActivity"/>
+        <activity android:name=".ui.common.ModalActivity" />
     </application>
 
 </manifest>
